# bit-matrix

./: .clang-format  .travis.yml  CMakeLists.txt  README.md
include/: bitmatrix.hpp
src/: bitmatrix.cpp  main.cpp
test/: test_1.cpp  test_10.cpp  test_11.cpp  test_12.cpp  test_2.cpp  test_3.cpp  test_3a.cpp  test_3b.cpp  test_4.cpp  test_5.cpp  test_6.cpp  test_7.cpp  test_8.cpp  test_9.cpp
